@@ -1,5 +1,7 @@
 * 0.158
 
+- Add a Jetty SocketAddressResolver that doesn't dispatch address
+  resolution to the executor for IP address literals.
 - Rename HTTP client selector config parameter to "http-client.selector-count".
 
 * 0.157
